--- a/index.html
+++ b/index.html
@@ -226,32 +226,15 @@
                             <nav>
                                 <ul>
                                     <li class="dropdown-holder"><a href="index.html">Home</a> </li>
-                                    <li class="megamenu-holder"><a href="shop-left-sidebar.html">Products</a>
+                                    <li class="megamenu-holder"><a href="#">Products</a>
                                         <ul class="megamenu hb-megamenu">
-                                            <li><a href="shop-list.html">Shop List</a></li>
-                                            <li><a href="single-product-gallery-left.html">Single Product Style</a>
-                                            </li>
-                                            <li><a href="single-product.html">Single Products</a></li>
+                                            <li><a href="shop-list.html">Product Category</a></li>
+                                            <li><a href="single-product-gallery-left.html">List All Product</a> </li>
                                         </ul>
                                     </li>
-                                    <li class="megamenu-static-holder"><a href="index.html">Pages</a>
-                                        <ul class="megamenu hb-megamenu">
-                                            <li><a href="blog-list.html">Blog List</a></li>
-                                            <li><a href="blog-details-left-sidebar.html">Blog Details Pages</a></li>
-                                            <li><a href="index.html">Other Pages</a>
-                                                <ul>
-                                                    <li><a href="login-register.html">My Account</a></li>
-                                                    <li><a href="checkout.html">Checkout</a></li>
-                                                    <li><a href="shopping-cart.html">Shopping Cart</a></li>
-                                                </ul>
-                                            </li>
-
-                                        </ul>
-                                    </li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                    <li><a href="about-us.html">About Us</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                    <li><a href="faq.html">FAQ</a></li>
+                                    <li><a href="#">Contact</a></li>
+                                    <li><a href="#">About Us</a></li>
+                                    <li><a href="#">FAQ</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -318,18 +301,18 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 text-center pt-xs-30">
+                    <!-- <div class="col-lg-4 col-md-4 text-center pt-xs-30">
                         <div class="li-banner">
                             <a href="#">
-                                <img src="images/banner/1_1.jpg" alt="">
+                                <img src="images/Shopee/Ảnh update t5/bapcaitim.jpeg" alt="">
                             </a>
                         </div>
                         <div class="li-banner mt-15 mt-sm-30 mt-xs-30">
                             <a href="#">
-                                <img src="images/banner/1_2.jpg" alt="">
+                                <img src="images/Shopee/Ảnh update t5/ANIMAL_2.jpg" alt="">
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -370,9 +353,6 @@
                                         <div class="product_desc">
                                             <div class="product_desc_info">
                                                 <div class="product-review">
-                                                    <h5 class="manufacturer">
-                                                        <a href="shop-left-sidebar.html">Graphic Corner</a>
-                                                    </h5>
                                                     <div class="rating-box">
                                                         <ul class="rating">
                                                             <li><i class="fa fa-star"></i></li>
@@ -383,15 +363,15 @@
                                                         </ul>
                                                     </div>
                                                 </div>
-                                                <h4><a class="product_name" href="single-product.html">Sen đáa</a></h4>
+                                                <h4><a class="product_name" href="#">Sen đáa</a></h4>
                                                 <div class="price-box">
-                                                    <span class="new-price">$46.80</span>
+                                                    <span class="new-price">20000</span>
                                                 </div>
                                             </div>
                                             <div class="add-actions">
                                                 <ul class="add-actions-link">
                                                     <li class="add-cart active"><a href="#">Add to cart</a></li>
-                                                    <li><a class="links-details" href="wishlist.html"><i
+                                                    <li><a class="links-details" href="#"><i
                                                                 class="fa fa-heart"></i></a></li>
                                                     <li><a href="#" title="quick view" class="quick-view-btn"
                                                             data-toggle="modal" data-target="#exampleModalCenter"><i
@@ -405,7 +385,7 @@
                                     <div class="single-product-wrap">
                                         <div class="product-image">
                                             <a href="single-product.html">
-                                                <img src="images/Shopee/Ảnh update t5/bapcaitim.jpeg" alt="Li's Product Image">
+                                                <img src="images/Shopee/Ảnh update t5/bapcaitim.jpeg" alt="">
                                             </a>
                                             <span class="sticker">New</span>
                                         </div>
@@ -413,7 +393,7 @@
                                             <div class="product_desc_info">
                                                 <div class="product-review">
                                                     <h5 class="manufacturer">
-                                                        <a href="shop-left-sidebar.html">Studio Design</a>
+                                                        <a href="shop-left-sidebar.html"></a>
                                                     </h5>
                                                     <div class="rating-box">
                                                         <ul class="rating">
@@ -425,18 +405,17 @@
                                                         </ul>
                                                     </div>
                                                 </div>
-                                                <h4><a class="product_name" href="single-product.html">Mug Today is a
-                                                        good day</a></h4>
+                                                <h4><a class="product_name" href="single-product.html">Sen đá</a></h4>
                                                 <div class="price-box">
-                                                    <span class="new-price new-price-2">$71.80</span>
-                                                    <span class="old-price">$77.22</span>
-                                                    <span class="discount-percentage">-7%</span>
+                                                    <span class="new-price new-price-2">50000</span>
+                                                    <span class="old-price">70000</span>
+                                                    <span class="discount-percentage">-14%</span>
                                                 </div>
                                             </div>
                                             <div class="add-actions">
                                                 <ul class="add-actions-link">
                                                     <li class="add-cart active"><a href="#">Add to cart</a></li>
-                                                    <li><a class="links-details" href="wishlist.html"><i
+                                                    <li><a class="links-details" href="#"><i
                                                                 class="fa fa-heart "></i></a></li>
                                                     <li><a href="#" title="quick view" class="quick-view-btn"
                                                             data-toggle="modal" data-target="#exampleModalCenter"><i
