--- a/tranggt.html
+++ b/tranggt.html
@@ -106,7 +106,7 @@
 						<!-- logo -->
 						<div class="header__logo">
 							<a href="#" class="header__logo-link">
-                                <img class="header__logo-img" src="image/fpt.png" alt="" style="height:60px;width:80px;">
+                                <img class="header__logo-img" src="image/logo.png" alt="" style="height65px;width:65px;">
                             
 							</a>
 						
